--- a/text-trie.cabal
+++ b/text-trie.cabal
@@ -73,9 +73,9 @@ Library
     -- The lower bounds are more restrictive than necessary.
     -- But then, we don't maintain any CI tests for older
     -- versions, so these are the lowest bounds we've verified.
-    Build-Depends: base       >= 4.5   && < 4.13
-                 , text       >= 1.2.3 && < 1.2.4
-                 , binary     >= 0.5.1 && < 0.8.7
+    Build-Depends: base       >= 4.5
+                 , text       >= 1.2.3
+                 , binary     >= 0.5.1
 
 ------------------------------------------------------------
 Test-Suite test-text-trie
@@ -90,16 +90,16 @@ Test-Suite test-text-trie
                   , FromListBench.Text.Encode
                   , TrieFile.Text
     build-depends: text-trie
-                 , base       >= 4.5   && < 4.13
-                 , bytestring >= 0.9.2 && < 0.11
-                 , text       >= 1.2.3 && < 1.2.4
-                 , binary     >= 0.5.1 && < 0.8.7
+                 , base       >= 4.5
+                 , bytestring >= 0.9.2
+                 , text       >= 1.2.3
+                 , binary     >= 0.5.1
                  , QuickCheck
                  , HUnit
                  , smallcheck
                  , microbench
-                 , bytestring-trie >= 0.2.5 && < 0.2.6
-                 , silently >= 1.2.5 && < 1.2.6
+                 , bytestring-trie >= 0.2.5
+                 , silently >= 1.2.5
 
 ------------------------------------------------------------
 ------------------------------------------------------- fin.
