--- a/text-trie.cabal
+++ b/text-trie.cabal
@@ -54,7 +54,8 @@ Extra-source-files:
 --     GHC ==8.0.1, GHC ==8.0.2,
 --     GHC ==8.2.1, GHC ==8.2.2,
 --     GHC ==8.4.1, GHC ==8.4.2, GHC ==8.4.3,
---     GHC ==8.6.1, GHC ==8.6.2
+--     GHC ==8.6.1, GHC ==8.6.2,
+--     GHC ==9.0.2
 
 Source-Repository head
     Type:     git
@@ -73,9 +74,9 @@ Library
     -- The lower bounds are more restrictive than necessary.
     -- But then, we don't maintain any CI tests for older
     -- versions, so these are the lowest bounds we've verified.
-    Build-Depends: base       >= 4.5   && < 4.13
-                 , text       >= 1.2.3 && < 1.2.4
-                 , binary     >= 0.5.1 && < 0.8.7
+    Build-Depends: base       >= 4.5   && < 4.16
+                 , text       >= 1.2.3 && < 1.2.6
+                 , binary     >= 0.5.1 && < 0.8.9
 
 ------------------------------------------------------------
 Test-Suite test-text-trie
@@ -90,15 +91,15 @@ Test-Suite test-text-trie
                   , FromListBench.Text.Encode
                   , TrieFile.Text
     build-depends: text-trie
-                 , base       >= 4.5   && < 4.13
+                 , base
                  , bytestring >= 0.9.2 && < 0.11
-                 , text       >= 1.2.3 && < 1.2.4
-                 , binary     >= 0.5.1 && < 0.8.7
+                 , text
+                 , binary
                  , QuickCheck
                  , HUnit
                  , smallcheck
                  , microbench
-                 , bytestring-trie >= 0.2.5 && < 0.2.6
+                 , bytestring-trie >= 0.2.5 && < 0.2.8
                  , silently >= 1.2.5 && < 1.2.6
 
 ------------------------------------------------------------
