--- a/text-trie.cabal
+++ b/text-trie.cabal
@@ -55,7 +55,8 @@ Extra-source-files:
 --     GHC ==8.2.1, GHC ==8.2.2,
 --     GHC ==8.4.1, GHC ==8.4.2, GHC ==8.4.3,
 --     GHC ==8.6.1, GHC ==8.6.2,
---     GHC ==9.0.2
+--     GHC ==9.0.2,
+--     GHC ==9.2.5
 
 Source-Repository head
     Type:     git
@@ -74,9 +75,9 @@ Library
     -- The lower bounds are more restrictive than necessary.
     -- But then, we don't maintain any CI tests for older
     -- versions, so these are the lowest bounds we've verified.
-    Build-Depends: base       >= 4.5   && < 4.16
+    Build-Depends: base       >= 4.5   && < 4.17
                  , text       >= 1.2.3 && < 1.2.6
-                 , binary     >= 0.5.1 && < 0.8.9
+                 , binary     >= 0.5.1 && < 0.8.10
 
 ------------------------------------------------------------
 Test-Suite test-text-trie
@@ -92,7 +93,7 @@ Test-Suite test-text-trie
                   , TrieFile.Text
     build-depends: text-trie
                  , base
-                 , bytestring >= 0.9.2 && < 0.11
+                 , bytestring >= 0.9.2 && < 0.12
                  , text
                  , binary
                  , QuickCheck
