--- a/text-trie.cabal
+++ b/text-trie.cabal
@@ -56,7 +56,7 @@ Extra-source-files:
 --     GHC ==8.4.1, GHC ==8.4.2, GHC ==8.4.3,
 --     GHC ==8.6.1, GHC ==8.6.2,
 --     GHC ==9.0.2,
---     GHC ==9.2.5
+--     GHC ==9.2.5, GHC ==9.2.6
 
 Source-Repository head
     Type:     git
