Rename module Data.Text.Internal.{Word16 => Word}
Towards supporting text's transition to UTF8

--- a/text-trie.cabal
+++ b/text-trie.cabal
@@ -69,7 +69,7 @@ Library
                    , Data.Trie.Text.Internal
                    , Data.Trie.Text.Convenience
                    , Data.Trie.TextInternal
-                   , Data.Text.Internal.Word16
+                   , Data.Text.Internal.Word
     Other-Modules:   Data.Trie.Text.BitTwiddle
                    , Data.Trie.Errors
     -- The lower bounds are more restrictive than necessary.
